Fixed links color in dark mode

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -9,10 +9,6 @@
   width: 70%;
   margin: 0 auto;
 }
-.logo {
-  font-size: 28px;
-  color: navy;
-}
 .item {
   align-items: center;
 }
