--- a/src/components/header.css
+++ b/src/components/header.css
@@ -5,21 +5,12 @@
   margin-left: 60px;
   display: inline;
 }
-.brand-name {
-  font-size: 1.5rem;
-  color: navy;
-  font-style: normal;
-}
 a.brand-name {
   position: absolute;
   top: 55px;
   text-decoration: none;
 }
-a.brand-name:hover {
-  color: navy;
-}
 .croissant-icon {
-  color: navy;
   display: inline;
   width: auto;
   float: right;
@@ -36,7 +27,4 @@ a.brand-name:hover {
   to {
     right: 5px;
   }
-}
-a.bonus {
-  color: navy;
 }
