--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,7 +1,3 @@
-.menu-bars-icon,
-.menu-bars-icon:hover {
-  color: navy;
-}
 .navbar {
   left: 28px;
   font-size: 25px;
