--- a/src/components/pages/bonus.css
+++ b/src/components/pages/bonus.css
@@ -1,7 +1,3 @@
-.bonus * {
-  color: navy;
-}
-
 .bonus {
   margin: 4rem 2rem;
   /* text-align: center; */
