--- a/src/components/pages/home.css
+++ b/src/components/pages/home.css
@@ -3,16 +3,16 @@
 /* from top to bottom angle */
 /* 90deg, */
 /* hue, saturation, lightness, opacity */
-/* hsla(0, 0%, 99%, 0.8), */
+/* hsla(0, 0%, 99%, 0.7), */
 /* rgba(219, 211, 211, 0.8)
     ),
     url("../../assets/tour-eiffel.jpeg");
   background-size: cover;
   background-position: center center;
   min-height: 100vh;
-  width: 100%;
-  color: navy;
-} */
+  width: 100%; */
+/* color: navy; */
+/* } */
 .greetings {
   padding: 4rem 2rem;
   margin: 0 auto;
@@ -51,7 +51,7 @@
   padding: 8px 18px;
 }
 .btn-about:hover {
-  color: white;
+  color: lightgray;
   text-decoration: none;
   font-size: 27px;
 }
